--- a/src/ui/page-header/PageHeader.module.scss
+++ b/src/ui/page-header/PageHeader.module.scss
@@ -1,4 +1,3 @@
-/* $focus-width: 1200px; */
 $focus-width: 386px;
 
 header.page-header {
@@ -10,12 +9,6 @@ header.page-header {
     --hero-dev-title: 3.75rem;
     --hero-dev-title-line-height: 4rem;
     --hero-subtitle: 1.5rem;
-    --shuttle-launch: 400px;
-    --shuttle-launch-flames-spread: 265px;
-    --shuttle-launch-flames: 75px;
-    --shuttle-elevator: 156px;
-    --shuttle-elevator-bot: -10px;
-    --shuttle-launch-distance: -400px;
 
     @media (width <= 1280px) {
         --focus-width: 800px;
@@ -24,12 +17,6 @@ header.page-header {
         --hero-title: 3.5rem;
         --hero-dev-title-line-height: 5rem;
         --hero-subtitle: 1.4rem;
-        --shuttle-launch: 300px;
-        --shuttle-launch-flames-spread: 127px;
-        --shuttle-launch-flames: 50px;
-        --shuttle-elevator: 117px;
-        --shuttle-elevator-bot: -10px;
-        --shuttle-launch-distance: -120px;
     }
 
     @media (width <= 1024px) {
@@ -39,12 +26,6 @@ header.page-header {
         --hero-title: 3rem;
         --hero-dev-title-line-height: 5rem;
         --hero-subtitle: 1.3rem;
-        --shuttle-launch: 200px;
-        --shuttle-launch-flames-spread: 127px;
-        --shuttle-launch-flames: 50px;
-        --shuttle-elevator: 77px;
-        --shuttle-elevator-bot: -5px;
-        --shuttle-launch-distance: -120px;
     }
 
     @media (width <= 768px) {
@@ -55,12 +36,6 @@ header.page-header {
         --hero-dev-title: 3.25rem;
         --hero-dev-title-line-height: 4rem;
         --hero-subtitle: 1.2rem;
-        --shuttle-launch: 200px;
-        --shuttle-launch-flames-spread: 127px;
-        --shuttle-launch-flames: 50px;
-        --shuttle-elevator: 77px;
-        --shuttle-elevator-bot: -5px;
-        --shuttle-launch-distance: -120px;
     }
 
     @media (width <= 640px) {
@@ -71,28 +46,13 @@ header.page-header {
         --hero-dev-title: 2.35rem;
         --hero-dev-title-line-height: 3rem;
         --hero-subtitle: 1.25rem;
-        --shuttle-launch: 200px;
-        --shuttle-launch-flames-spread: 127px;
-        --shuttle-launch-flames: 50px;
-        --shuttle-elevator: 77px;
-        --shuttle-elevator-bot: -5px;
-        --shuttle-launch-distance: -120px;
     }
 
     @media (width <= 480px) {
-        --focus-width: 386px;
-        --mnt-width: 200%;
-        --distance-multiplyer: 3;
         --hero-title: 1.75rem;
         --hero-dev-title: 2.25rem;
         --hero-dev-title-line-height: 3rem;
         --hero-subtitle: 1.25rem;
-        --shuttle-launch: 200px;
-        --shuttle-launch-flames-spread: 127px;
-        --shuttle-launch-flames: 31px;
-        --shuttle-elevator: 77px;
-        --shuttle-elevator-bot: -5px;
-        --shuttle-launch-distance: -120px;
     }
 
     @media (width <= 395px) {
